--- a/src/uncompiled_scss/style.scss
+++ b/src/uncompiled_scss/style.scss
@@ -7,6 +7,7 @@
 @import "styles/support/common";
 @import "styles/support/buttons";
 @import "styles/support/swiper";
+@import "styles/support/burger";
 
 @import "styles/components/header";
 
