--- a/src/uncompiled_scss/styles/components/_header.scss
+++ b/src/uncompiled_scss/styles/components/_header.scss
@@ -1,96 +1,59 @@
-.header {
-  &.opened {
-    .header-background {
-      &::before {
-        display: block;
-        content: "";
-        position: fixed;
-        z-index: 999;
-        background: rgba(0, 0, 0, 0.4);
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-      }
-    }
-    .header-box {
-      display: flex;
-    }
-  }
-}
-
-.menu-button {
-  display: block;
-  width: 30px;
-  height: 20px;
-  background-color: transparent;
-  border: none;
-  background-size: contain;
-  background-image: url("../images/burger.svg");
-}
-
-.mobile-header {
-  height: 95px;
-  width: 100%;
-}
-
 .header-box {
-  display: none;
-  flex-direction: column;
-  padding: 50px 40px;
-  position: fixed;
-  z-index: 1000;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 271px;
-  background: white;
-}
-
-.header-menu {
-  display: block;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  margin: 10px 0;
-}
-
-.header-menu__link {
-  display: inline-flex;
-  font-size: 18px;
-  text-decoration: none;
-  color: black;
-  align-items: center;
-  margin: 10px 0;
-}
-
-@include desktop {
-  .header-background,
-  .mobile-header-box {
-    display: none;
-  }
-
-  .header-box {
+  .header {
+    margin-top: 44px;
+    background: rgba(255, 255, 255, 0.6);
+    box-shadow: 0px 4px 37px rgba(0, 0, 0, 0.08);
+    backdrop-filter: blur(17px);
+    border-radius: 8px;
+    padding: 15px;
     display: flex;
-    width: 100%;
-    flex-direction: row;
-    position: initial;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
-  }
+    position: relative;
 
-  .header-menu {
-    display: flex;
-    align-items: center;
-  }
+    .header__menu {
+      display: none;
+      list-style: none;
+      margin: 0;
+      padding: 24px;
 
-  .header-menu__link {
-    padding: 15px;
-    font-size: 14px;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 62px;
 
-    &:hover {
-      text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
+      margin-top: 25px;
+
+      background: #FFFFFF;
+      box-shadow: 0px 4px 37px rgba(0, 0, 0, 0.08);
+      backdrop-filter: blur(17px);
+
+      border-radius: 8px;
+
+      li {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 25px;
+        text-align: center;
+        border-bottom: 2px solid rgba(4, 48, 113, 0.2);
+
+        a {
+          display: inline-block;
+          width: 100%;
+          text-decoration: none;
+          color: #043071;
+          padding: 15px;
+        }
+
+        &:last-child {
+          border-bottom: none;
+        }
+      }
+
+      &.opened {
+        display: block;
+      }
     }
   }
 }
