--- a/src/uncompiled_scss/styles/support/_buttons.scss
+++ b/src/uncompiled_scss/styles/support/_buttons.scss
@@ -1,4 +1,58 @@
+.button {
+  display: inline-block;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  padding: 10px 15px;
+
+  color: #FFFFFF;
+  background: #043071;
+  border-radius: 6px;
+
+  outline: none;
+  border: none;
+
+  &.button_small {
+    height: 32px;
+    font-size: 13px;
+  }
+
+  &.button_medium {
+    height: 48px;
+    font-size: 15px;
+  }
+}
+
+.burger {
+  display: block;
+  width: 20px;
+  height: 16px;
+
+
+  outline: none;
+  border: none;
+
+  background-image: url("../images/burger.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  cursor: pointer;
+}
 
 @include desktop {
+  .button {
+    border-radius: 10px;
 
+    &.button_small {
+      height: 48px;
+      font-size: 16px;
+    }
+
+    &.button_medium {
+      height: 80px;
+      font-size: 20px;
+    }
+  }
 }
