--- a/src/uncompiled_scss/styles/components/_header.scss
+++ b/src/uncompiled_scss/styles/components/_header.scss
@@ -57,3 +57,40 @@
     }
   }
 }
+
+@include desktop {
+  .header-box {
+    .header {
+      padding: 15px 20px;
+
+      .burger {
+        display: none;
+      }
+
+      .header__menu {
+        display: block;
+        position: initial;
+
+        padding: 0;
+        margin: 0;
+        margin-left: auto;
+        margin-right: 25px;
+
+        display: flex;
+        background: none;
+        box-shadow: none;
+        backdrop-filter: none;
+
+        li {
+          border-bottom: none;
+          margin: 0 15px;
+        }
+      }
+
+      .button_small {
+        padding-left: 45px;
+        padding-right: 45px;
+      }
+    }
+  }
+}
