First screen mobile

--- a/src/uncompiled_scss/style.scss
+++ b/src/uncompiled_scss/style.scss
@@ -10,6 +10,7 @@
 @import "styles/support/burger";
 
 @import "styles/components/header";
+@import "styles/components/first_screen";
 
 body {
   font-family: "Roboto", sans-serif;
