--- a/src/uncompiled_scss/styles/components/_header.scss
+++ b/src/uncompiled_scss/styles/components/_header.scss
@@ -1,6 +1,10 @@
 .header-box {
+  position: fixed;
+  left: 0;
+  right: 0;
+
   .header {
-    margin-top: 44px;
+    margin-top: 40px;
     background: rgba(255, 255, 255, 0.6);
     box-shadow: 0px 4px 37px rgba(0, 0, 0, 0.08);
     backdrop-filter: blur(17px);
@@ -61,7 +65,7 @@
 @include desktop {
   .header-box {
     .header {
-      padding: 15px 20px;
+      padding: 12px 20px;
 
       .burger {
         display: none;
