--- a/src/uncompiled_scss/styles/support/_buttons.scss
+++ b/src/uncompiled_scss/styles/support/_buttons.scss
@@ -3,7 +3,7 @@
 
   display: flex;
   align-items: center;
-  text-align: center;
+  justify-content: center;
 
   padding: 10px 15px;
 
@@ -22,6 +22,10 @@
   &.button_medium {
     height: 48px;
     font-size: 15px;
+  }
+
+  &.button_full-width {
+    width: 100%;
   }
 }
 
