--- a/src/uncompiled_scss/styles/support/_common.scss
+++ b/src/uncompiled_scss/styles/support/_common.scss
@@ -34,4 +34,14 @@
       height: 36px;
     }
   }
+
+  .paragraph {
+    font-size: 16px;
+    line-height: 25px;
+
+    &.paragraph_big {
+      font-size: 32px;
+      line-height: 39px;
+    }
+  }
 }
