How it works mobile

--- a/src/uncompiled_scss/style.scss
+++ b/src/uncompiled_scss/style.scss
@@ -6,11 +6,12 @@
 @import "styles/support/mixins";
 @import "styles/support/common";
 @import "styles/support/buttons";
-@import "styles/support/swiper";
 @import "styles/support/burger";
+@import "styles/support/grid";
 
 @import "styles/components/header";
 @import "styles/components/first_screen";
+@import "styles/components/how_it_works";
 
 body {
   font-family: "Roboto", sans-serif;
