--- a/src/uncompiled_scss/styles/components/_first_screen.scss
+++ b/src/uncompiled_scss/styles/components/_first_screen.scss
@@ -39,6 +39,7 @@
         }
   
         .paragraph {
+          margin-bottom: 15px;
   
           &.paragraph_big {
             color: #043071;;
