--- a/src/uncompiled_scss/styles/support/_common.scss
+++ b/src/uncompiled_scss/styles/support/_common.scss
@@ -12,19 +12,46 @@
 
 .title {
   font-size: 24px;
-  margin-top: 0;
+  margin: 0;
+  color: #043071;
+
+  &.title_small {
+    font-size: 15px;
+    line-height: 19px;
+  }
+
+  &.title_big {
+    font-size: 46px;
+  }
 }
 
 .paragraph {
   font-size: 13px;
+  line-height: 19px;
   color: #000;
+
+  &.paragraph_dark-blue {
+    color: #043071;
+  }
 
   &.paragraph_big {
     font-size: 19px;
     line-height: 23px;
+    margin: 0;
   }
 }
 
+.jet-beauty-divider {
+  object-fit: fill;
+
+  margin-top: -300px;
+  margin-bottom: -300px;
+
+  height: 812px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 50% 39%;
+}
 
 
 @include desktop {
@@ -32,6 +59,17 @@
     &.logo_header {
       width: 110px;
       height: 36px;
+    }
+  }
+
+  .title {
+    &.title_small {
+      font-size: 18px;
+      line-height: 24px;
+    }
+
+    &.title_big {
+      font-size: 64px;
     }
   }
 
