--- a/src/uncompiled_scss/styles/support/_common.scss
+++ b/src/uncompiled_scss/styles/support/_common.scss
@@ -1,9 +1,7 @@
 .logo {
   content: url("../images/jet-beauty-logo.svg");
   display: inline-block;
-
   line-height: 1;
-
   &.logo_header {
     width: 88px;
     height: 28px;
@@ -14,12 +12,10 @@
   font-size: 24px;
   margin: 0;
   color: #043071;
-
   &.title_small {
     font-size: 15px;
     line-height: 19px;
   }
-
   &.title_big {
     font-size: 46px;
   }
@@ -29,11 +25,9 @@
   font-size: 13px;
   line-height: 19px;
   color: #000;
-
   &.paragraph_dark-blue {
     color: #043071;
   }
-
   &.paragraph_big {
     font-size: 19px;
     line-height: 23px;
@@ -42,17 +36,14 @@
 }
 
 .jet-beauty-divider {
-  object-fit: fill;
-
+  content: url("../images/jet-beauty-divider-mobile.svg");
   margin-top: -300px;
   margin-bottom: -300px;
-
   height: 812px;
   width: 100%;
   object-fit: cover;
   object-position: 50% 39%;
 }
-
 
 @include desktop {
   .logo {
@@ -61,25 +52,33 @@
       height: 36px;
     }
   }
-
   .title {
+    font-size: 56px;
+    line-height: 71px;
     &.title_small {
       font-size: 18px;
       line-height: 24px;
     }
-
     &.title_big {
       font-size: 64px;
     }
   }
-
   .paragraph {
     font-size: 16px;
     line-height: 25px;
-
     &.paragraph_big {
       font-size: 32px;
       line-height: 39px;
     }
+  }
+  .jet-beauty-divider {
+    content: url("../images/jet-beauty-divider-desktop.svg");
+    object-fit: fill;
+    margin-top: -450px;
+    margin-bottom: -450px;
+    height: 1350px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 50% 39%;
   }
 }
