--- a/src/uncompiled_scss/style.scss
+++ b/src/uncompiled_scss/style.scss
@@ -12,6 +12,7 @@
 @import "styles/components/header";
 @import "styles/components/first_screen";
 @import "styles/components/how_it_works";
+@import "styles/components/why_choose_us";
 
 body {
   font-family: "Roboto", sans-serif;
