--- a/src/uncompiled_scss/style.scss
+++ b/src/uncompiled_scss/style.scss
@@ -8,11 +8,13 @@
 @import "styles/support/buttons";
 @import "styles/support/burger";
 @import "styles/support/grid";
+@import "styles/support/scrollable";
 
 @import "styles/components/header";
 @import "styles/components/first_screen";
 @import "styles/components/how_it_works";
 @import "styles/components/why_choose_us";
+@import "styles/components/creators";
 
 body {
   font-family: "Roboto", sans-serif;
