--- a/src/uncompiled_scss/style.scss
+++ b/src/uncompiled_scss/style.scss
@@ -15,6 +15,7 @@
 @import "styles/components/how_it_works";
 @import "styles/components/why_choose_us";
 @import "styles/components/creators";
+@import "styles/components/characteristics";
 
 body {
   font-family: "Roboto", sans-serif;
