--- a/src/uncompiled_scss/style.scss
+++ b/src/uncompiled_scss/style.scss
@@ -16,6 +16,7 @@
 @import "styles/components/why_choose_us";
 @import "styles/components/creators";
 @import "styles/components/characteristics";
+@import "styles/components/footer";
 
 body {
   font-family: "Roboto", sans-serif;
