--- a/src/uncompiled_scss/styles/support/_common.scss
+++ b/src/uncompiled_scss/styles/support/_common.scss
@@ -38,6 +38,20 @@
     line-height: 23px;
     margin: 0;
   }
+
+  &.paragraph_opacity {
+    opacity: 0.7;
+  }
+
+  &.paragraph_high-opacity {
+    opacity: 0.4;
+  }
+}
+
+.divider {
+  display: block;
+  width: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 .jet-beauty-divider {
