--- a/src/uncompiled_scss/styles/support/_mixins.scss
+++ b/src/uncompiled_scss/styles/support/_mixins.scss
@@ -9,3 +9,12 @@
     @content;
   }
 }
+
+@mixin hide-scrollbar {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
