--- a/src/uncompiled_scss/styles/support/_scrollable.scss
+++ b/src/uncompiled_scss/styles/support/_scrollable.scss
@@ -1,6 +1,7 @@
 .scrollable {
   display: flex;
   overflow-x: scroll;
+  @include hide-scrollbar;
   .scrollable-item {
     flex-shrink: 0;
     flex-basis: 80%;
