--- a/src/uncompiled_scss/styles/components/_characteristics.scss
+++ b/src/uncompiled_scss/styles/components/_characteristics.scss
@@ -6,6 +6,9 @@
   .characteristics {
     display: flex;
     overflow-x: scroll;
+
+    @include hide-scrollbar;
+
     padding: 30px 16px;
     .characteristic {
       display: flex;
@@ -16,7 +19,7 @@
       box-shadow: 0px 4px 37px rgba(0, 0, 0, 0.08);
       backdrop-filter: blur(17px);
       border-radius: 8px;
-      padding: 15px 30px;
+      padding: 15px 20px;
       margin-right: 25px;
       img {
         width: 30px;
