--- a/src/uncompiled_scss/styles/components/_how_it_works.scss
+++ b/src/uncompiled_scss/styles/components/_how_it_works.scss
@@ -60,6 +60,7 @@
     .cards {
       display: flex;
       overflow-x: scroll;
+      @include hide-scrollbar;
       padding: 40px;
       .card {
         background: rgba(255, 255, 255, 0.6);
