--- a/src/uncompiled_scss/styles/components/_first_screen.scss
+++ b/src/uncompiled_scss/styles/components/_first_screen.scss
@@ -89,13 +89,20 @@
           .title {
             font-size: 56px;
             line-height: 56px;
+
+            margin-bottom: 30px;
           }
 
           .first-screen__message-box {
             margin-right: 35%;
 
             .message-box_limited {
+              margin-top: 30px;
               width: 455px;
+
+              .button {
+                margin-top: 40px;
+              }
             }
           }
         }
