--- a/src/uncompiled_scss/styles/components/_how_it_works.scss
+++ b/src/uncompiled_scss/styles/components/_how_it_works.scss
@@ -1,5 +1,6 @@
 .how-it-works-box {
-  margin-top: 120px;
+  padding-top: 120px;
+
   .how-it-works {
     padding: 15px;
     .interactive-flow-box {
