--- a/src/uncompiled_scss/styles/components/_why_choose_us.scss
+++ b/src/uncompiled_scss/styles/components/_why_choose_us.scss
@@ -1,5 +1,5 @@
 .why-choose-us-box {
-  margin-top: 80px;
+  padding-top: 80px;
   margin-bottom: 50px;
   width: 100%;
   .why-choose-us-text {
@@ -43,7 +43,6 @@
   }
   .offer {
     margin-top: 30px;
-    margin-bottom: 250px;
     .title {
       margin-bottom: 25px;
     }
