--- a/src/uncompiled_scss/styles/support/_buttons.scss
+++ b/src/uncompiled_scss/styles/support/_buttons.scss
@@ -56,5 +56,12 @@
       height: 80px;
       font-size: 20px;
     }
+
+    transition: 0.2s;
+
+    &:hover {
+      box-shadow: 0px 4px 37px rgba(0, 0, 0, 0.08);
+      opacity: 0.9;
+    }
   }
 }
