--- a/src/uncompiled_scss/styles/support/_common.scss
+++ b/src/uncompiled_scss/styles/support/_common.scss
@@ -109,6 +109,10 @@
     &.title_big {
       font-size: 64px;
     }
+
+    &.title_modal {
+      font-size: 32px;
+    }
   }
   .paragraph {
     font-size: 16px;
